--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         <li>Births: a list of birthdays which happened on the provided day and month</li>
         <li>Deaths: a list of deaths which happened on the provided day and month</li>
         <li>Holidays: a list of fixed holidays celebrated on the provided day and month</li>
-        <li>Other: a list of significant events which happened on the provided day and month and which are not covered by the other types yet</li>
+        <li>Others: a list of significant events which happened on the provided day and month and which are not covered by the other types yet</li>
       </ul>
       <label for="dropdown">Filter: </label>
       <select name="" id="selection">
