--- a/static/styles.css
+++ b/static/styles.css
@@ -7,3 +7,19 @@ body{
     background-color: #181A1B;
     color: #E8E6E3;
 }
+
+#loader {
+    border: 16px solid darkgray; /* Light grey */
+    border-top: 16px solid lightgray; /* Blue */
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 2s linear infinite;
+    align-content: auto;
+    /* margin: auto; //For centering  */
+}
+  
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
