Fixed some typos

--- a/templates/index.html
+++ b/templates/index.html
@@ -161,40 +161,40 @@
             if(year == "Annually."){
               switch (month) {
                 case "1":
-                  dateString.textContent = "Jan " + String(day) + " annually";
+                  dateString.textContent = "Jan " + String(day).padStart(2,'0') + " annually";
                   break;
                 case "2":
-                  dateString.textContent = "Feb " + String(day) + " annually";
+                  dateString.textContent = "Feb " + String(day).padStart(2,'0') + " annually";
                   break;
                 case "3":
-                  dateString.textContent = "Mar " + String(day) + " annually";
+                  dateString.textContent = "Mar " + String(day).padStart(2,'0') + " annually";
                   break;
                 case "4":
-                  dateString.textContent = "Apr " + String(day) + " annually";
+                  dateString.textContent = "Apr " + String(day).padStart(2,'0') + " annually";
                   break;
                 case "5":
-                  dateString.textContent = "May " + String(day) + " annually";
+                  dateString.textContent = "May " + String(day).padStart(2,'0') + " annually";
                   break;
                 case "6":
-                  dateString.textContent = "Jun " + String(day) + " annually";
+                  dateString.textContent = "Jun " + String(day).padStart(2,'0') + " annually";
                   break;
                 case "7":
-                  dateString.textContent = "Jul " + String(day) + " annually";
+                  dateString.textContent = "Jul " + String(day).padStart(2,'0') + " annually";
                   break;
                 case "8":
-                  dateString.textContent = "Aug"  + String(day) + " annually";
+                  dateString.textContent = "Aug "  + String(day).padStart(2,'0') + " annually";
                   break;
                 case "9":
-                  dateString.textContent = "Sep " + String(day) + " annually";
+                  dateString.textContent = "Sep " + String(day).padStart(2,'0') + " annually";
                   break;
                 case "10":
-                  dateString.textContent = "Oct " + String(day) + " annually";
+                  dateString.textContent = "Oct " + String(day).padStart(2,'0') + " annually";
                   break;
                 case "11":
-                  dateString.textContent = "Nov " + String(day) + " annually";
+                  dateString.textContent = "Nov " + String(day).padStart(2,'0') + " annually";
                   break;
                 case "12":
-                  dateString.textContent = "Dec"  + String(day) + " annually";
+                  dateString.textContent = "Dec "  + String(day).padStart(2,'0') + " annually";
                   break;
               
                 default:
