--- a/static/styles.css
+++ b/static/styles.css
@@ -3,22 +3,62 @@ ul p span{
     /* text-decoration: underline; */
 }
 
+
 body{
     background-color: #181A1B;
     color: #E8E6E3;
+    padding-left: 5%;    
+    padding-bottom: 10%;
 }
 
 #loader {
-    border: 16px solid darkgray; /* Light grey */
-    border-top: 16px solid lightgray; /* Blue */
+    border: 8px solid darkgray; /* outer circle */
+    border-top: 8px solid lightgray; /* inner */
     border-radius: 50%;
-    width: 60px;
-    height: 60px;
+    width: 80px;
+    height: 80px;
     animation: spin 2s linear infinite;
     align-content: auto;
-    /* margin: auto; //For centering  */
+    margin: auto; /* For centering */
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
-  
+
+.centered{
+    text-align: center !important;    
+}
+
+header{
+    margin-top: none;
+    padding-top: 3%;    
+}
+
+#filter{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 16px   ;
+}
+
+h1{
+    text-decoration: underline wavy lightblue 2px;
+}
+
+#js h4{
+    text-align: center;
+    font-weight: bold;
+    text-decoration: underline wavy lightblue 2px;
+    text-decoration-skip-ink: none;
+}
+
+a:hover{
+    color: lightblue !important;    
+}
+
+a:visited{
+    color: #cba194 !important;
+}
+
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
