--- a/static/paper.css
+++ b/static/paper.css
@@ -1701,15 +1701,15 @@ button.disabled, button[disabled],
 a {
   color: #41403e;
   color: var(--secondary);
-  background-image: linear-gradient(5deg, transparent 65%, #0b74d5 80%, transparent 90%), linear-gradient(165deg, transparent 5%, #0b74d5 15%, transparent 25%), linear-gradient(165deg, transparent 45%, #0b74d5 55%, transparent 65%), linear-gradient(15deg, transparent 25%, #0b74d5 35%, transparent 50%);
-  background-position: 0 90%;
+  /* background-image: linear-gradient(5deg, transparent 65%, #0b74d5 80%, transparent 90%), linear-gradient(165deg, transparent 5%, #0b74d5 15%, transparent 25%), linear-gradient(165deg, transparent 45%, #0b74d5 55%, transparent 65%), linear-gradient(15deg, transparent 25%, #0b74d5 35%, transparent 50%); */  
+  /* background-position: 0 90%;
   background-repeat: repeat-x;
-  background-size: 4px 3px;
+  background-size: 4px 3px; */
   text-decoration: none;
 }
 a:visited {
   color: #41403e;
-  color: var(--primary);
+  color: var(--primary);  
   text-decoration: none;
 }
 
@@ -2492,10 +2492,10 @@ fieldset.form-group {
 }
 .modal .modal-link,
 .modal a {
-  background-image: linear-gradient(5deg, transparent 65%, #0b74d5 80%, transparent 90%), linear-gradient(165deg, transparent 5%, #0b74d5 15%, transparent 25%), linear-gradient(165deg, transparent 45%, #0b74d5 55%, transparent 65%), linear-gradient(15deg, transparent 25%, #0b74d5 35%, transparent 50%);
+  /* background-image: linear-gradient(5deg, transparent 65%, #0b74d5 80%, transparent 90%), linear-gradient(165deg, transparent 5%, #0b74d5 15%, transparent 25%), linear-gradient(165deg, transparent 45%, #0b74d5 55%, transparent 65%), linear-gradient(15deg, transparent 25%, #0b74d5 35%, transparent 50%);
   background-position: 0 90%;
   background-repeat: repeat-x;
-  background-size: 4px 3px;
+  background-size: 4px 3px; */
   cursor: pointer;
   text-decoration: none;
 }
