--- a/static/styles.css
+++ b/static/styles.css
@@ -37,11 +37,14 @@ header{
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    gap: 16px   ;
+    gap: 16px;    
+}
+#filter input{
+    padding: auto;
 }
 
 h1{
-    text-decoration: underline wavy lightblue 2px;
+    text-decoration: underline wavy lightblue 4px;
 }
 
 #js h4{
@@ -51,8 +54,8 @@ h1{
     text-decoration-skip-ink: none;
 }
 
-a:hover{
-    color: lightblue !important;    
+a:hover{    
+    text-decoration: underline wavy lightblue 2px !important;
 }
 
 a:visited{
@@ -62,4 +65,70 @@ a:visited{
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+/* Customize the label (the #yearLabel) */
+#yearLabel {    
+    width: max-content;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    cursor: pointer;    
+    white-space: nowrap;
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+input[type=checkbox] {
+    display: none;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+    margin-left: 5%;
+    height: 25px;
+    width: 25px;
+    background-color: grey;
+}
+
+/* On mouse-over, add a lightcyan background color */
+#yearLabel:hover input ~ .checkmark {
+    background-color: lightcyan;
+}
+
+/* When the checkbox is checked, add a lightblue background */
+#yearLabel input:checked ~ .checkmark {
+    background-color: lightblue;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark::after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+#yearLabel input:checked ~ .checkmark::after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+#yearLabel .checkmark::after {
+    margin: 5% 0 0 5%;
+    width: 5px;
+    height: 10px;
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+} 
+
+input[type=number]{
+    width: 70px;
 }
